Included gitignore and removed the an unrequired option in the hours dropdown

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="jumbotron text-center">
         <h1 class="display-4">Q-Alarm</h1>
-        <p class="lead">A simple and quick method to set an alarm for your important tasks.</p>
+        <p class="lead">A simple and quick web application to set an alarm for your important tasks.</p>
         <hr class="my-4">
         <h5 class="display-5">Current Time</h5>
         <h4 id="currentTime" class="display-4"></h4>
@@ -71,7 +71,6 @@
                         <option>21</option>
                         <option>22</option>
                         <option>23</option>
-                        <option>24</option>
                     </select>
                 </div>
                 <div class="col">
